--- a/todo
+++ b/todo
@@ -1,73 +1,6 @@
-store = {
-    loginData: {
-        isLoggedIn: false
-    }
-}
 
-loginStates = {
-    form1: {
-        email: "",
-        emailError: [
-            {
-                clause: "Email must be valid",
-                valid: false
-            },
-            {
-                clause: "Email must not be empty",
-                valid: false
-            }
-        ]
-            
-    },
-    form2: {
-        firstName: "",
-        lastName: "",
-        phoneNum: "",
-        address: "",
-        firstNameErr: [
-            {
-                clause: "firstName must not be empty",
-                valid: false
-            }
-        ],
-        lastNameErr:  [
-            {
-                clause: "lastName must not be empty",
-                valid: false
-            }
-        ],
-        phoneNumErr:  [
-            {
-                clause: "phoneNum must not be empty",
-                valid: false
-            },
-            {
-                clause: "phoneNum must only be digits",
-                valid: false
-            }
-        ],
-        addressErr:  [
-            {
-                clause: "Address must not be empty",
-                valid: false
-            },
-            {
-                clause: "Address be more than 20 chracters",
-                valid: false
-            }
-        ]
-    },
-    form3: {
-        password: "",
-        passwordErr: [
-            {
-                clause: "Password must be more than 6 characters Long",
-                valid: false
-            },
-            {
-                clause: "Password must match",
-                valid: true
-            }
-        ]
-    }
-}
+replace the rootstate and implement rootstate changes for login-request, login successful
+implement page transitions
+implement progress bar animation
+hide the submit button
+make everything responsive
