pass form data through url params

--- a/todo
+++ b/todo
@@ -4,3 +4,4 @@ implement page transitions
 implement progress bar animation
 hide the submit button
 make everything responsive
+validate password confirmation
